# bazel-maven-deps

./: .bazelrc  .bazelrc-ci  .buildifier.json  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  TODO.md  WORKSPACE  WORKSPACE.bzlmod  bazel_maven_deps.bazelproject  repositories.bzl  setup.bzl
bazel/: BUILD.bazel  defs.bzl  jvm.bzl
maven-deps-catalog-api/: BUILD.bazel
maven-deps-catalog-api/src/main/java/com/salesforce/tools/bazel/mavendependencies/collection/: CollectionDelta.java  CollectionSaveResult.java  MavenArtifact.java  MavenConventions.java  MavenDependenciesCollection.java  MavenDependenciesCollectionIndexFile.java  MavenDependenciesFile.java
maven-deps-catalog-api/src/main/java/com/salesforce/tools/bazel/mavendependencies/pinnedcatalog/: BazelCatalogFile.java  BazelCatalogIndexFile.java  BazelCatalogModuleExtensionFile.java  BazelDependenciesCatalog.java  BazelJavaDependencyImport.java
maven-deps-catalog-api/src/test/java/com/salesforce/tools/bazel/mavendependencies/collection/: MavenArtifactTest.java  MavenConventionsTest.java  MavenDependenciesFileTest.java
maven-deps-catalog-api/src/test/java/com/salesforce/tools/bazel/mavendependencies/helper/: NoScmWritableFilesystem.java
maven-deps-catalog-api/src/test/java/com/salesforce/tools/bazel/mavendependencies/pinnedcatalog/: BazelCatalogFileTest.java  BazelCatalogIndexFileTest.java  BazelDependenciesCatalogTest.java
maven-deps-catalog-api/src/test/resources/: catalog_roundtrip_test.bzl  dependencies_roundtrip_test.bzl  dependencies_roundtrip_test_concise.bzl  dependencies_test.bzl
maven-deps-cli-framework/: BUILD.bazel
maven-deps-cli-framework/src/main/java/com/salesforce/tools/bazel/cli/: BaseCommand.java  BaseCommandWithWorkspaceRoot.java  SharedConsoleMessagePrinter.java
maven-deps-cli-framework/src/main/java/com/salesforce/tools/bazel/cli/helper/: ConsoleMessagePrinter.java  MessagePrinter.java  NullProgressMonitor.java  ProgressBarProgressMonitor.java  ProgressMonitor.java  ScmSupport.java  Slf4jMessagePrinter.java  UnifiedLogger.java
maven-deps-cli-framework/src/main/java/com/salesforce/tools/bazel/cli/scm/: NaiveScmTool.java  NaiveScmToolConverter.java
maven-deps-cli-framework/src/slf4j/java/com/salesforce/tools/bazel/cli/: ConsoleLogger.java
maven-deps-cli-framework/src/slf4j/java/com/salesforce/tools/bazel/cli/slf4j/: ConsoleLoggerFactory.java  ConsoleLoggerServiceProvider.java
maven-deps-cli-framework/src/test/java/com/salesforce/tools/bazel/cli/scm/: NaiveScmToolConverterTest.java
maven-deps-tool/: BUILD.bazel
maven-deps-tool/src/main/java/com/salesforce/tools/bazel/mavendependencies/maven/: MavenShaComputer.java
maven-deps-tool/src/main/java/com/salesforce/tools/bazel/mavendependencies/maven/artifactresolver/: ConsoleDependencyGraphDumper.java  DependencyResultWithTransferInfo.java  MavenDepsModelCache.java  MavenDepsModelResolver.java  MavenDepsNodeListGenerator.java  MavenDepsRepoSys.java  MavenDepsRepositoryListener.java  MavenDepsSecDispatcher.java  MavenDepsSettingsDecryptorFactory.java  MavenDepsTransferListener.java  SettingsUtils.java  Slf4jLogger.java
maven-deps-tool/src/main/java/com/salesforce/tools/bazel/mavendependencies/resolver/: StarlarkDependenciesResolver.java
maven-deps-tool/src/main/java/com/salesforce/tools/bazel/mavendependencies/tool/cli/: AddDependencyCommand.java  AddExclusionCommand.java  BaseCommandUsingDependencyCollection.java  BaseDependencyCommand.java  DependenciesToolCli.java  DependencyInfoCommand.java  GetVersionVariableValueCommand.java  LintDependencyCollectionCommand.java  PinDependenciesCommand.java  PrintDependencyCatalogCommand.java  RemoveDependencyCommand.java  RemoveExclusionCommand.java  SetDependencyVersionCommand.java  SetVersionVariableCommand.java
maven-deps-tool/src/main/java/com/salesforce/tools/bazel/mavendependencies/visibility/: ReverseDependenciesProvider.java  StrictDepsVisibilityProvider.java  VisibilityProvider.java  VisibilityProviderFactory.java
maven-deps-tool/src/main/java/com/salesforce/tools/bazel/mavendependencies/vulnerabilities/: NoOpVulnerabilityScanner.java  VulnerabilityScanner.java  VulnerabilityScannerFactory.java
maven-deps-tool/src/slf4j/java/com/salesforce/tools/bazel/cli/: ConsoleLogger.java
maven-deps-tool/src/test/it/: README.md
maven-deps-tool/src/test/java/com/salesforce/tools/bazel/mavendependencies/tool/cli/: GetVersionVariableValueCommandTest.java  IntegrationTestForCommands.java  MessageCollector.java  PinDependenciesCommandTest.java  SetDependencyVersionCommandTest.java  SetVersionVariableCommandTest.java
maven-deps-tool/src/test/java/com/salesforce/tools/bazel/mavendependencies/tool/cli/it/: JarWithDependenciesIT.java
starlark/: BUILD.bazel
starlark/src/main/java/com/salesforce/tools/bazel/mavendependencies/starlark/: BazelConventions.java  ParseException.java  StarlarkFileParser.java  StarlarkStringBuilder.java
starlark/src/test/java/com/salesforce/tools/bazel/mavendependencies/starlark/: BazelConventionsTest.java  StarlarkFileParserTest.java  StarlarkStringBuilderTest.java
