package(default_visibility = ["//visibility:private"])

java_binary(
    name = "cli",
    main_class = "com.salesforce.tools.bazel.mavendependencies.tool.cli.DependenciesToolCli",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//maven-deps-cli-framework:slf4j_logger",
        "//maven-deps-tool",
    ],
)
