#load("@bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
#load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:private"])

#stardoc(
#    name = "3pp_macro_doc",
#    input = "defs.bzl",
#    out = "3pp_macro_doc.md",
#    deps = [
#        "@rules_pkg//doc_build:rules_pkg_lib",
#    ],
#    visibility = ["//visibility:public"],
#)
